Update login page styles

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -11,7 +11,7 @@ body {
   inset: 0; /* top:0 left:0 right:0 bottom:0 */
   background-image:
     linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-    url("C:\Users\krishna sree\food-delivery-app\src\assets\loginn-bg.jpg.jpeg");
+    url("/src/assets/loginn-bg.jpg.jpeg");
 
   background-size: cover;
   background-position: center;
